# react-axum-rusted

./: Cargo.toml  README.md  rustfmt.toml
src/: error.rs  main.rs
src/model/: mod.rs
src/web/: mod.rs  mw_auth.rs  routes_login.rs  routes_tickets.rs
tests/: quick_dev.rs
